# rust-cookbook-example

./: readme.md
Algorithms/: Cargo.toml
Algorithms/src/: example_a.rs  example_b.rs  example_c.rs  example_d.rs  example_e.rs  example_f.rs  main.rs
Asyn/: Cargo.toml
Asyn/src/: example_a.rs  main.rs
CommandLine/: Cargo.toml
CommandLine/src/: example_a.rs  example_b.rs  main.rs
Compression/: Cargo.toml
Compression/src/: example_a.rs
Concurrency/: Cargo.toml
Concurrency/src/: example_a.rs  example_b.rs  example_c.rs  example_d.rs  example_e.rs  example_f.rs  main.rs
Cryptography/: Cargo.toml  file.txt
Cryptography/src/: example_a.rs  example_b.rs  example_c.rs
DataStructures/: Cargo.toml
DataStructures/src/: example_a.rs
Database/: Cargo.toml
Database/src/: example_a.rs
DateTime/: Cargo.toml
DateTime/src/: example_a.rs  example_b.rs  example_c.rs  main.rs
Development/: Cargo.toml  build.rs
Development/src/: example_a.rs  example_b.rs  example_c.rs
Development/src/cpp/: hello.c  hello2.cpp
Encoding/: Cargo.toml
Encoding/src/: example_a.rs  example_b.rs  main.rs
ErrorHandling/: Cargo.toml
ErrorHandling/src/: example_a.rs  example_b.rs  main.rs
FileSystem/: Cargo.toml  lines.txt
FileSystem/src/: example_a.rs  main.rs
OperatingSystem/: Cargo.toml
OperatingSystem/src/: example_a.rs  example_b.rs  example_c.rs  main.rs
