[package]
name = "Concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
image = "0.24.5"
log = "0.4.17"
num = "0.4.0"
num_cpus = "1.15.0"
rand = "0.8.5"
rayon = "1.7.0"
ring = "0.16.20"
simplelog = "0.12.0"
threadpool = "1.8.1"
walkdir = "2.3.2"
