[package]
name = "Development"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.79"

[dependencies]
env_logger = "0.10.0"
error-chain = "0.12.4"
log = "0.4.17"
semver = "1.0.17"
